Added distinction between old and new APIs for error routing
